@@ -2,7 +2,7 @@
 # refractiveindex.info database is in the public domain
 # copyright and related rights waived via CC0 1.0
 
-REFERENCES: "D. Eimerl et al.. Optical, mechanical, and thermal properties of barium borate , <a href=\"http://dx.doi.org/10.1063/1.339536\"><i>J. Appl. Phys.</i>, <b>62</b>, 1968-1983 (1987)</a>"
+REFERENCES: "D. Eimerl, L. Davis, S. Velsko, E. K. Graham and A. Zalkin. Optical, mechanical, and thermal properties of barium borate , <a href=\"http://dx.doi.org/10.1063/1.339536\"><i>J. Appl. Phys.</i>, <b>62</b>, 1968-1983 (1987)</a>"
 COMMENTS: "Beta barium borate (ß-BaB<sub>2</sub>O<sub>4</sub>, BBO). Extraordinary ray (e)."
 DATA:
   - type: formula 4
